# foundry

./: .gitignore  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  alembic.ini  check.py  check_21.py  check_22.py  check_26.py  check_27.py  check_data.py  check_idea_14.py  check_idea_16.py  check_sessions.py  check_table.py  create_validation_sessions.py  debug_29.py  debug_idea_14.py  diagnose.py  find_26.py  find_latest.py  fix_27_manual.py  fix_idea.py  force_complete_19.py  get_latest_structured.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_imports.py  verify_complete.py  verify_fix.py  view_ideas.py
backend/app/: __init__.py  config.py  main.py  test_schema.py
backend/app/agents/: competitor_analyzer.py  content_marketing_agent.py  critic_agent.py  financial_projections.py  hiring_plan_agent.py  launch_strategy_generator.py  market_validator.py  market_validator_with_rag.py  planner_agent.py  refiner_agent.py  report_generator.py  risk_analyzer.py  startup_advisor_agent.py  team_building_assistant.py  ubaidkundlik2py
backend/app/data/: startup_metadata.pkl
backend/app/db/: session.py
backend/app/middleware/: auth.py  error_handler.py  logging.py
backend/app/models/: audit_log.py  (+5 more)
backend/migrations/: add_quality_evaluation.sql
backend/models/: model_metadata.json  startup_death_model.pkl  training_dataset.csv
backend/outputs/: pitch_deck_73.pptx  pitch_deck_74.pptx  pitch_deck_77.pptx  pitch_deck_79.pptx
backend/scripts/: download_real_data.py  train_real_model.py
(+96 files in other folders)
